[gd_scene load_steps=8 format=3 uid="uid://ktn3sxtb2p1b"]

[ext_resource type="Script" path="res://objs/storage/food_store.gd" id="1_axuc2"]
[ext_resource type="Material" uid="uid://j24q5skq8gti" path="res://assets/materials/farm.tres" id="2_bcato"]
[ext_resource type="AudioStream" uid="uid://bdhh8hluat28f" path="res://assets/sounds/put_in_storage.mp3" id="3_agyhu"]
[ext_resource type="AudioStream" uid="uid://wfn4ftlcrn6f" path="res://assets/sounds/take_out_of_storage.mp3" id="4_aqpei"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f3ppr"]

[sub_resource type="BoxMesh" id="BoxMesh_3ls61"]
material = ExtResource("2_bcato")

[sub_resource type="BoxShape3D" id="BoxShape3D_cpoff"]
size = Vector3(1.1, 1.5, 2)

[node name="food_store" type="StaticBody3D"]
script = ExtResource("1_axuc2")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_f3ppr")

[node name="mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0117102, 0, -0.00387573)
mesh = SubResource("BoxMesh_3ls61")

[node name="area" type="Area3D" parent="."]

[node name="collision" type="CollisionShape3D" parent="area"]
shape = SubResource("BoxShape3D_cpoff")

[node name="audio_store" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_agyhu")
unit_size = 3.0

[node name="audio_take" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_aqpei")
unit_size = 3.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
